--- a/help/release-notes/2024.md
+++ b/help/release-notes/2024.md
@@ -4,9 +4,9 @@ description: Notas de la versión de Analytics de 2024
 feature: Release Notes
 exl-id: ffbeb9e9-a377-4a1c-9c43-6a3c887255e5
 source-git-commit: 37f3d5bb4fb4f8de61560b09f4a96ee54c591305
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5025'
-ht-degree: 97%
+ht-degree: 100%
 
 ---
 
@@ -21,7 +21,7 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 | **Nueva documentación para actualizar de Adobe Analytics a Customer Journey Analytics** | Para las organizaciones que actualizan de Adobe Analytics a Customer Journey Analytics, existen varias opciones de actualización y muchas consideraciones que se deben tener en cuenta según la implementación de Adobe Analytics actual y los objetivos a largo plazo de una organización. Ya hay disponibles nuevos recursos de documentación para ayudarle a comprender mejor:<ul><li>Las distintas rutas de actualización existentes</li><li>Qué rutas de actualización están disponibles según la implementación de Adobe Analytics actual de una organización</li><li>Las ventajas y desventajas de cada ruta de actualización</li><li>Guía paso a paso para cada ruta de actualización</li><li>Consideraciones para administrar datos históricos</li></ul>[Introducción a la actualización a Customer Journey Analytics](https://experienceleague.adobe.com/es/docs/analytics-platform/using/compare-aa-cja/upgrade-to-cja/cja-upgrade-getstarted) | | Ya disponible |
 | **Establecer `contextData` campos mediante XDM** | Los clientes que envían datos a Adobe Analytics a través de Experience Edge Network pueden [establecer valores de datos de contexto](https://experienceleague.adobe.com/es/docs/analytics/implementation/vars/page-vars/contextdata) directamente en XDM o en las partes de “datos” de la carga útil. |  | Ya disponible |
 | **API de creación de informes en tiempo real de Analytics 2.0** | La nueva API de creación de informes en tiempo real 2.0 de Adobe Analytics mejora la integración de los clientes y proporciona resultados rápidos de la creación de informes. Estos resultados se pueden utilizar mediante programación para que trabajen con informes básicos, de tendencias y de desglose. [Más información](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/reports/real-time/) | | 30 de mayo de 2024 |
-| **El complemento de recopilación de medios de streaming: envíe datos web al Edge Network de Adobe Experience Platform con el SDK web** | Ahora puede utilizar el SDK web de Adobe Experience Platform para enviar datos web de medios de streaming al Edge Network de Adobe Experience Platform. Esta mejora le permite crear campañas más personalizadas y proporcionar contenido más personalizado, lo que da como resultado más datos de seguimiento sobre los que informar.<p>Este cambio proporciona un método de colección unificado para implementaciones web en todas las soluciones de Platform, como Customer Journey Analytics, Adobe Real-time CDP, Adobe Journey Optimizer y reenvío de eventos. Anteriormente, la única manera de enviar datos web de medios de streaming a Edge Network era mediante la API de Media Edge. <p>[Más información](https://experienceleague.adobe.com/en/docs/media-analytics/using/implementation/edge-recommended/media-edge-sdk/edge-web-sdk)</p> | | 29 de mayo de 2024 |
+| **Complemento de colección Streaming Media: envíe datos web a Adobe Experience Platform Edge Network con el SDK web** | Ahora puede utilizar el SDK web de Adobe Experience Platform para enviar datos web de medios de streaming a Adobe Experience Platform Edge Network. Esta mejora le permite crear campañas más personalizadas y proporcionar contenido más personalizado, lo que da como resultado más datos de seguimiento sobre los que informar.<p>Este cambio proporciona un método de colección unificado para implementaciones web en todas las soluciones de Platform, como Customer Journey Analytics, Adobe Real-time CDP, Adobe Journey Optimizer y reenvío de eventos. Anteriormente, la única manera de enviar datos web de medios de streaming a Edge Network era mediante la API de Media Edge. <p>[Más información](https://experienceleague.adobe.com/en/docs/media-analytics/using/implementation/edge-recommended/media-edge-sdk/edge-web-sdk)</p> | | 29 de mayo de 2024 |
 | **Aumento de los umbrales de bajo tráfico predeterminados** | A **mediados de abril de 2024**, Adobe empezará a aumentar los umbrales de bajo tráfico predeterminados del grupo de informes de la siguiente manera: ![umbrales de bajo tráfico](assets/thresholds.png) Esto afectará únicamente a las variables que actualmente están configuradas por debajo de los nuevos umbrales. Estos cambios se introducirán gradualmente y esperamos que el trabajo esté terminado a **finales de mayo**. A medida que se vayan aplicando estos incrementos, es posible que note cambios en las variables de alta cardinalidad:<ul><li>Puede haber más valores de dimensión disponibles para la creación de informes.</li><li>Los segmentos y las métricas calculadas pueden incluir más datos.</li><li>Los conjuntos de informes virtuales basados en segmentos pueden incluir más datos.</li><li>Las exportaciones de clasificación pueden incluir más datos.</li></ul> | Mediados de abril de 2024 | 31 de mayo de 2024 |
 | **Configuración del administrador para controlar las cuentas y ubicaciones que se utilizan para exportación e importación** | La nueva pestaña “Configuración de administración” del Administrador de ubicaciones permite a los administradores controlar si los usuarios pueden crear y editar cuentas y ubicaciones. Esta configuración se aplica cuando los usuarios configuran cuentas de importación y exportación en la nube y configuran ubicaciones de importación y exportación en la nube. <p>Los administradores también pueden limitar los tipos de cuentas (Google Cloud Platform, Azure RBAC, Amazon S3, etc.) que pueden crear y utilizar los usuarios.</p><p>Anteriormente, cualquier usuario podía crear, editar y utilizar cuentas y ubicaciones para cualquier tipo de cuenta.</p><p>(Vínculo a documentación actualizada a seguir)</p> | 12 de junio de 2024 | 30 de junio de 2024 |
 | **Compartir cuentas y ubicaciones que se utilizan para exportar e importar** | Ahora, los usuarios pueden poner las cuentas y ubicaciones que creen a disposición de todos los usuarios de su organización. Los propietarios de cuentas y ubicaciones y los administradores del sistema son los únicos que pueden editar y eliminar cuentas y ubicaciones.<p>Antes, las cuentas y ubicaciones solo las podía utilizar el usuario que las había creado.</p><p>Esta configuración está disponible cuando los usuarios configuran cuentas de importación y exportación en la nube y configuran ubicaciones de importación y exportación en la nube. </p> <p>(Vínculo a documentación actualizada a seguir)</p> | 12 de junio de 2024 | 30 de junio de 2024 |
@@ -63,7 +63,7 @@ AN-327749; AN-332949; AN-342881; AN-343171; AN-343708; AN-344034; AN-345559; AN-
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
-| **El complemento de recopilación de medios de streaming: enviar datos de Roku al Edge Network de Adobe Experience Platform** | Ahora, cuando [instalación del complemento de recopilación de medios de streaming con Experience Platform Edge](https://experienceleague.adobe.com/es/docs/media-analytics/using/implementation/edge-recommended/media-edge-sdk/implementation-edge)Además, puede utilizar el SDK de Roku de Adobe Experience Platform para enviar datos de medios de streaming a Adobe Experience Platform. |  | 12 de abril de 2024 |
+| **Complemento de colección Streaming Media: envío de datos de Roku a Adobe Experience Platform Edge Network** | Ahora, al [instalar el complemento de colección Streaming Media con Experience Platform Edge](https://experienceleague.adobe.com/es/docs/media-analytics/using/implementation/edge-recommended/media-edge-sdk/implementation-edge), puede utilizar el SDK de Roku de Adobe Experience Platform para enviar datos de medios de streaming a Adobe Experience Platform. |  | 12 de abril de 2024 |
 | **Mejora del flujo de trabajo para la migración del SDK web** | Ahora, las secuencias de datos asignan automáticamente campos del objeto de datos del SDK web directamente a Adobe Analytics. [Asignación de objetos de datos](/help/implement/aep-edge/data-var-mapping.md) es similar a [Asignación de objetos XDM](/help/implement/aep-edge/xdm-var-mapping.md), pero no se requiere un esquema XDM. Esta mejora del flujo de trabajo ofrece las siguientes ventajas:<ul><li>Retrasa el requisito de utilizar un esquema hasta que esté listo para enviar datos a Adobe Experience Platform. Si fuera necesario un esquema en esta fase de la migración de la implementación, se vería obligado a utilizar un esquema basado en campos de Adobe Analytics. Los servicios de Adobe Experience Platform, como Customer Journey Analytics, no tienen un concepto de props o eVars. Un esquema centrado en Analytics puede presentar dificultades si su organización desea utilizar su propio esquema en el futuro.</li><li>Después de realizar cambios de implementación en el SDK web, su organización está en mejor posición para migrar de Adobe Analytics a Customer Journey Analytics. Si envía datos a Adobe Analytics mediante el SDK web, no es necesario realizar cambios de implementación adicionales para enviar datos a Adobe Experience Platform. En su lugar, puede utilizar la preparación de datos para asignar campos de objeto de datos al esquema XDM.</li></ul>Consulte [Migración de la extensión de etiqueta de Adobe Analytics a la extensión de etiqueta del SDK web](/help/implement/aep-edge/web-sdk/analytics-extension-to-web-sdk.md) y [Migración del AppMeasurement al SDK web](../implement/aep-edge/web-sdk/appmeasurement-to-web-sdk.md) para obtener más información. |  | Abril de 2024 |
 | **Mejora de permisos para componentes de [!UICONTROL Workspace] solo para proyectos** | Anteriormente, si un usuario (usuario A) compartía un proyecto con otro usuario (usuario B) y otorgaba al usuario B acceso de edición al proyecto, el usuario B podía editar el proyecto. Sin embargo, el usuario B no podría editar [!UICONTROL Segmentos rápidos] incrustados en el proyecto. Esa limitación se ha eliminado: el usuario B puede editar [!UICONTROL Segmentos rápidos] y otros componentes solo de proyecto incrustados en el proyecto compartido. |  | 17 de abril de 2024 |
 | **Utilice las mismas cuentas en la nube para [!UICONTROL Fuentes de datos], [!UICONTROL Data Warehouse] y [!UICONTROL Conjuntos de clasificación]** | Las cuentas y ubicaciones en la nube que cree ahora se pueden usar para exportar datos (con [!UICONTROL Fuentes de datos] y [!UICONTROL Data Warehouse]) e importar datos (con [!UICONTROL Conjuntos de clasificación]).<p> **Cambios al configurar cuentas:** los usuarios pueden [Configurar cuentas de importación y exportación en la nube](https://experienceleague.adobe.com/es/docs/analytics/components/locations/configure-import-accounts) y [Configurar ubicaciones de importación y exportación en la nube](https://experienceleague.adobe.com/es/docs/analytics/components/locations/configure-import-locations) que se puedan utilizar para cualquiera de las siguientes finalidades:<ul><li>Importar datos con [!UICONTROL Conjuntos de clasificación]</li><li>Exportar datos con [!UICONTROL Fuentes de datos]</li><li>Exportación de datos con [!UICONTROL Data Warehouse].</li></ul><p>**Cambios al administrar cuentas y ubicaciones desde la página [!UICONTROL Ubicaciones]**: los usuarios pueden utilizar la página [Ubicaciones](https://experienceleague.adobe.com/es/docs/analytics/components/locations/locations-manager) (debajo de [!UICONTROL Componentes] > Ubicaciones) para ver y administrar todas las cuentas y ubicaciones que creen, independientemente del lugar donde se hayan creado. <p>Anteriormente, la página [!UICONTROL Ubicaciones] solo se aplicaba a las cuentas creadas para importar datos con [!UICONTROL Conjuntos de clasificación].</p>**Cambios al administrar ubicaciones desde [!UICONTROL Data Warehouse] o [!UICONTROL Conjuntos de clasificaciones]**<p>Al administrar ubicaciones dentro de un área de aplicación determinada ([!UICONTROL Data Warehouse] o [!UICONTROL Conjuntos de clasificaciones]), solo están disponibles las ubicaciones que se crearon en esa área de aplicación específica. Por ejemplo, al ver el área de aplicación [!UICONTROL Data Warehouse], solamente están disponibles las ubicaciones de [!UICONTROL Data Warehouse]. Todas las cuentas siguen estando disponibles en cada área de aplicación, independientemente del área de aplicación en la que se crearon. Anteriormente, todas las cuentas y ubicaciones estaban disponibles en cada área de aplicación, independientemente del área de aplicación en la que se habían creado. Esto sigue ocurriendo cuando se visualiza el área de aplicación [!UICONTROL Fuentes de datos]. | | 17 de abril de 2024 |
@@ -248,7 +248,7 @@ AN-323975; AN-325383; AN-325809; AN-326787; AN-331611; AN-331818; AN-332124; AN-
 | --- | --- | --- |
 | **EOL para [!DNL Reports & Analytics]** | 10 de enero de 2024 | A partir del **17 de enero de 2024**, Adobe tiene la intención de descatalogar [!DNL Reports & Analytics] y los informes y funciones que lo acompañaban. Los informes, las visualizaciones y la tecnología subyacente que alimentan [!DNL Reports & Analytics] ya no cumplen los estándares tecnológicos de Adobe. La mayoría de las funciones de [!DNL Reports & Analytics] están disponibles en [Analysis Workspace](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/home.html?lang=es). Desde el lanzamiento de Analysis Workspace en 2015, las funcionalidades y capacidades de [!DNL Reports & Analytics] se han trasladado a Analysis Workspace y se ha alcanzado un umbral de paridad de flujo de trabajo. [Este aviso](https://spark.adobe.com/page/6WnF8JK6IRDhf/) explica el proceso de finalización de la vida útil.<p>El 17 de enero de 2024, finalizaremos muchas de las funciones de Reports &amp; Analytics asociadas, incluidas, entre otras, las siguientes: Informes programados, Extractos de datos e Informes DL.  A partir del 17 de enero de 2024, ya no se enviarán los informes programados.  Además, ya no podrá programar informes futuros después del 17 de enero de 2024. |
 | **Funcionalidad del final de vida útil de las [!UICONTROL Listas de publicación]** | 10 de enero de 2024 | Como parte del final de la vida útil de Reports &amp; Analytics, [!UICONTROL Listas de publicación] llegó al final de su vida útil el **17 de enero de 2024**.  No podrá crear [!UICONTROL Listas de publicación] nuevas ni acceder a las existentes para enviar o programar proyectos de [!UICONTROL Analysis Workspace]. |
-| **Fin de la vida útil para Data Workbench** | 2 de enero de 2024 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**.  Consulte [Anuncio del fin de la vida útil de Data Workbench](https://experienceleague.adobe.com/en/docs/discontinued/using/data-workbench) para obtener más información. Póngase en contacto con el Administrador de cuentas de Adobe de su organización si tiene alguna pregunta. |
+| **Fin de la vida útil para Data Workbench** | 2 de enero de 2024 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**.  Consulte [Anuncio del fin de la vida útil de Data Workbench](https://experienceleague.adobe.com/es/docs/discontinued/using/data-workbench) para obtener más información. Póngase en contacto con el Administrador de cuentas de Adobe de su organización si tiene alguna pregunta. |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 11 de mayo de 2023 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el **1 de enero de 2025**. Adobe I/O no permitirá que se creen nuevas credenciales de JWT a partir del 1 de mayo de 2024. Los clientes que utilizan JWT deben crear una nueva credencial de servidor a servidor OAuth o migrar su credencial JWT existente a una credencial de servidor a servidor OAuth. Los clientes también deben actualizar sus aplicaciones cliente para utilizar las nuevas credenciales de servidor a servidor de OAuth. <ul><li>[Migración de credenciales de cuenta de servicio (JWT)](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/migration/)</li><li>[Guía de implementación para aplicaciones nuevas y antiguas con OAuth](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/implementation/)<li>[Uso de las nuevas credenciales de servidor a servidor de OAuth](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/implementation/)</li><li>[Preguntas frecuentes](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/faqs/)</li></ul> |
 
 {style="table-layout:auto"}
