--- a/help/release-notes/2025.md
+++ b/help/release-notes/2025.md
@@ -3,10 +3,10 @@ title: Ver las notas de la versión de Adobe Analytics de 2025
 description: Notas de la versión de Analytics de 2025
 feature: Release Notes
 exl-id: 47f23b62-81f2-4b4d-8908-3e33c693b4e3
-source-git-commit: 657f1417185a2eabb496e0e7207520211f652794
+source-git-commit: d952d199c3c02ee8d0a223569f58d56027809cfb
 workflow-type: tm+mt
 source-wordcount: '2281'
-ht-degree: 100%
+ht-degree: 99%
 
 ---
 
@@ -21,7 +21,7 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 | **Inventario de Analytics** | En esta página se ofrece información general completa sobre el entorno de Adobe Analytics, incluido el número de proyectos y componentes, grupos de informes, usuarios, etc. Al automatizar el proceso de inventario, puede comprender rápidamente el esfuerzo necesario para cambiar de Adobe Analytics a Customer Journey Analytics. Esto hará que la transición sea más fácil y rápida. [Más información](https://experienceleague.adobe.com/es/docs/analytics/admin/admin-tools/analytics-inventory) |  | 26 de marzo de 2025 |
 | **Actualizar al campo de datos de contexto de Analytics`a.locale`** | Esta actualización cambia la forma en que se establece el campo de datos de contexto de Analytics `a.locale` al recopilar datos mediante Experience Edge. Cuando se envían datos a Adobe Analytics mediante Experience Edge, los campos de Analytics se rellenan en función de una asignación de campos XDM. La asignación de `c.a.locale` hace referencia a un campo XDM no estándar, `xdm.environment.language`. Este campo se actualizará para hacer referencia al campo correcto, `xdm.environment._dc.language`.<p>La asignación seguirá haciendo referencia a `xdm.environment.language` de cara a la compatibilidad con versiones anteriores. Para mantener la continuidad, si se establecen ambos campos, `xdm.environment.language` tendrá prioridad. Puede ver la lista completa de asignaciones de XDM a campos estándar de Analytics [aquí](https://experienceleague.adobe.com/es/docs/analytics/implementation/aep-edge/xdm-var-mapping). | | 5 de marzo de 2025 |
 | **Guía de actualización de Customer Journey Analytics** | Le permite generar una guía paso a paso para actualizar de Adobe Analytics a Customer Journey Analytics. Esta guía está adaptada a su organización y tiene en cuenta su entorno Adobe Analytics actual, los usos previstos para Customer Journey Analytics y cualquier cambio que su organización desee hacer para ahorrar tiempo.<p>Para empezar a generar su guía personalizada, inicie sesión en [!DNL Customer Journey Analytics] y, a continuación, seleccione **[!UICONTROL Actualizar a Customer Journey Analytics]** en la pestaña **[!UICONTROL Workspace]**.<p>[Más información](https://experienceleague.adobe.com/es/docs/analytics-platform/using/compare-aa-cja/upgrade-to-cja/cja-upgrade-recommendations#recommended-upgrade-steps-for-most-organizations) |  | 11 de marzo de 2025 |
-| **Dimensiones de Data Warehouse solamente** | A partir de mayo de 2025, Adobe empezará a establecer determinadas dimensiones (variables personalizadas como eVars y props) como &quot;Data Warehouse solamente&quot;. Esto se aplicará a las dimensiones que muestren las siguientes características:<ul><li> Durante un periodo de varios meses, la variable alcanza el límite de bajo tráfico en los primeros días del mes.</li><li>> 90% de los valores pasados se ven solo una vez durante el mes.</li></ul>Los ejemplos incluyen dimensiones que contienen marcas de tiempo, UUID u otros datos con una cardinalidad extremadamente alta y en los que se pasan nuevos valores únicos para casi todas las visitas o visitantes durante el mes. Estas dimensiones suelen superar los límites de poco tráfico muy rápidamente y solo una pequeñísima parte de los valores se pueden notificar en Analysis Workspace. Esto hace que los informes que utilizan estas dimensiones sean confusos, ya que no muestran información útil o precisa. Estas dimensiones no siguen el propósito de la funcionalidad de poco tráfico ni se benefician de ella, cuyo objetivo es proporcionar una forma de realizar informes sobre los valores que se convierten en &quot;populares&quot; después de que la dimensión haya superado los límites de poco tráfico durante el mes. [Más información](https://experienceleague.adobe.com/es/docs/analytics/technotes/low-traffic.)<p>Las dimensiones marcadas como &quot;Data Warehouse solamente&quot; no estarán disponibles para la creación de informes en Analysis Workspace. Sin embargo, seguirán estando disponibles para la creación de informes a través de Data Warehouse, ya que los límites de poco tráfico no se aplican aquí.<p>Esto no significa que todas las dimensiones que han alcanzado los límites de poco tráfico sean candidatas para marcarse como &quot;Data Warehouse solamente&quot;. La mayoría de las dimensiones que alcanzan los límites de poco tráfico realmente cumplen la intención de la funcionalidad de poco tráfico:<ul><li>La mayoría de los valores pasados no son únicos.</li><li>Los valores comunes siguen entrando después de que se hayan alcanzado los límites de poco tráfico durante el mes.</li><li>Pueden seguir apareciendo nuevos valores &quot;populares&quot;.</li></ul>Solo las dimensiones en las que casi todos los valores pasados son nuevos y únicos se marcarán como &quot;Data Warehouse solamente&quot;. El aumento de los límites de poco tráfico no es una solución dada la singularidad de los datos que se recopilan en estas situaciones. | | Mayo de 2025 |
+| **Dimensiones de Data Warehouse solamente** | A partir de mayo de 2025, Adobe empezará a establecer determinadas dimensiones (variables personalizadas como eVars y props) como &quot;Data Warehouse solamente&quot;. Esto se aplicará a las dimensiones que muestren las siguientes características:<ul><li> Durante un periodo de varios meses, la variable alcanza el límite de bajo tráfico en los primeros días del mes.</li><li>> 90% de los valores pasados se ven solo una vez durante el mes.</li></ul>Los ejemplos incluyen dimensiones que contienen marcas de tiempo, UUID u otros datos con una cardinalidad extremadamente alta y en los que se pasan nuevos valores únicos para casi todas las visitas o visitantes durante el mes. Estas dimensiones suelen superar los límites de poco tráfico muy rápidamente y solo una pequeñísima parte de los valores se pueden notificar en Analysis Workspace. Esto hace que los informes que utilizan estas dimensiones sean confusos, ya que no muestran información útil o precisa. Estas dimensiones no siguen el propósito de la funcionalidad de poco tráfico ni se benefician de ella, cuyo objetivo es proporcionar una forma de realizar informes sobre los valores que se convierten en &quot;populares&quot; después de que la dimensión haya superado los límites de poco tráfico durante el mes. [Más información](https://experienceleague.adobe.com/en/docs/analytics/technotes/low-traffic)<p>Las dimensiones marcadas como &quot;Data Warehouse solamente&quot; no estarán disponibles para la creación de informes en Analysis Workspace. Sin embargo, seguirán estando disponibles para la creación de informes a través de Data Warehouse, ya que los límites de poco tráfico no se aplican aquí.<p>Esto no significa que todas las dimensiones que han alcanzado los límites de poco tráfico sean candidatas para marcarse como &quot;Data Warehouse solamente&quot;. La mayoría de las dimensiones que alcanzan los límites de poco tráfico realmente cumplen la intención de la funcionalidad de poco tráfico:<ul><li>La mayoría de los valores pasados no son únicos.</li><li>Los valores comunes siguen entrando después de que se hayan alcanzado los límites de poco tráfico durante el mes.</li><li>Pueden seguir apareciendo nuevos valores &quot;populares&quot;.</li></ul>Solo las dimensiones en las que casi todos los valores pasados son nuevos y únicos se marcarán como &quot;Data Warehouse solamente&quot;. El aumento de los límites de poco tráfico no es una solución dada la singularidad de los datos que se recopilan en estas situaciones. | | Mayo de 2025 |
 
 
 ### Correcciones de Adobe Analytics
@@ -32,7 +32,7 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 **Analysis Workspace**: AN-353491; AN-363403; AN-367230; AN-367313; AN-368582; AN-369821; AN-370227;
 **Clasificaciones**: AN-369848; AN-370196; AN-370226; AN-370437
 **Fuentes de datos**: AN-366162; AN-368906; AN-369066; AN-369087; AN-369225; AN-369798
-**Control de datos**: AN-365157
+**Gobernanza de datos**: AN-365157
 **Fuentes de datos**: AN-367550
 **Plataforma**: AN-363931
 **Report Builder**: AN-367460; AN-368975
